project upgrade - upgrade to spring-boot 2.7.8; - upgrade to springdoc-openapi 1.6.14; - upgrade to jib-maven-plugin 3.3.1; - upgrade to hibernate-types 2.21.1; - upgrade to jquery 3.6.3; - upgrade to semantic-ui 2.5.0; - code refactor from .collect(Collectors.toList()) to .toList(); - replace mysql.mysql-connector-java dependency to com.mysql.mysql-connector-j; - replace openjdk to amazoncorretto with version 17.0.6; - upgrade to mysql docker image 8.0.32; - upgrade to postgres docker image 15.2; - upgrade to mongo docker image 6.0.4.